ReImplemented Preferences DataStore for UserDetails

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
 
     // DataStore
     implementation('androidx.datastore:datastore-preferences:1.0.0')
+    implementation("androidx.datastore:datastore-preferences-core:1.0.0")
 
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
