User will be Navigated to the Dashboard screen when LoggedIn

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,9 @@
         <activity android:name=".ProfileEdit"
             android:exported="false"/>
 
+        <activity android:name=".MainActivity"
+            android:exported="false"/>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
