--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
         android:theme="@style/Theme.MannSignApp"
         tools:targetApi="31">
         <activity
-            android:name=".ProductDetailsActivity"
+            android:name=".ui.activity.ReviewsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.ProductDetailsActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
