--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,4 +130,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
 
+    //facebook shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
