--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.WishListActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.ChatActivity"
             android:exported="false">
             <meta-data
@@ -63,7 +66,7 @@
         <activity
             android:name=".AuthenticationActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".ProfileActivity"
             android:exported="false" />
