--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,14 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io" }
+        flatDir {
+            dirs("libs")
+        }
+        maven { url "https://artifactory.paytm.in/libs-release-local" }
+        maven {
+            url "https://jitpack.io"
+        }
+
     }
 }
 task clean(type: Delete) {
