--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.AccountDeleteActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.OrderPlacedActivity"
             android:exported="false">
             <meta-data
