--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,16 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
+    buildFeatures {
         dataBinding true
         viewBinding true
     }
+
+    lintOptions{
+        checkReleaseBuilds false
+        abortOnError false
+    }
+
 }
 
 dependencies {
@@ -86,7 +92,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
 
-    implementation"androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -135,6 +141,6 @@ dependencies {
 
     //paytm integration
     //implementation 'com.paytm.appinvokesdk:appinvokesdk:1.6.0'
-    implementation(name:'paytmsdk', ext:'aar')
+    implementation(name: 'paytmsdk', ext: 'aar')
 
 }
