--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ allprojects {
         maven {
             url "https://jitpack.io"
         }
+        maven {
+            url  "https://phonepe.mycloudrepo.io/public/repositories/phonepe-intentsdk-android"
+        }
 
     }
 }
