--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.surajmanshal.mannsign"
         minSdk 21
         targetSdk 33
-        versionCode 5
-        versionName "1.4"
+        versionCode 8
+        versionName "1.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -144,5 +144,9 @@ dependencies {
     implementation 'com.github.alirezat775:carousel-view:1.1.1'
 
     implementation 'phonepe.intentsdk.android.release:IntentSDK:2.0.0'
+
+    implementation 'com.google.android.play:core:1.9.0'
+//    implementation 'com.google.android.play:app-update:2.0.1'
+//    implementation 'com.google.android.play:app-update-ktx:2.0.1'
 
 }
