--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,14 +28,9 @@
         tools:targetApi="31">
         <activity
             android:name=".PaymentActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_payment"
             android:theme="@style/Theme.MannSignApp" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
         </activity>
         <activity
@@ -45,7 +40,11 @@
             android:name=".ui.activity.IntroActivity"
             android:exported="true"
             android:theme="@style/splash_screen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.activity.AccountDeleteActivity"
