--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
+//    ext.kotlin_version = '1.6.0'
     dependencies {
         classpath 'com.google.gms:google-services:4.3.14'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
 
