--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,15 +47,15 @@
 
         <activity
             android:name=".PaymentActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_payment"
             android:theme="@style/Theme.MannSignApp" >
 
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
 
         </activity>
         <activity
