--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.surajmanshal.mannsign"
         minSdk 21
         targetSdk 33
-        versionCode 11
-        versionName "2.2"
+        versionCode 13
+        versionName "2.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -146,7 +146,9 @@ dependencies {
 
     implementation 'com.github.alirezat775:carousel-view:1.1.1'
 
-    implementation 'phonepe.intentsdk.android.release:IntentSDK:2.1.1'
+//    implementation 'phonepe.intentsdk.android.release:IntentSDK:2.1.1'
+    implementation 'phonepe.intentsdk.android.release:IntentSDK:2.4.2'
+
 
     implementation 'com.google.android.play:core:1.9.0'
 //    implementation 'com.google.android.play:app-update:2.0.1'
